@@ -28,6 +28,7 @@ fun Project.applyCommonJavaConfiguration(sourcesJar: Boolean, banSlf4j: Boolean 
                 options.isDeprecation = true
                 options.encoding = "UTF-8"
                 options.compilerArgs.add("-parameters")
+                options.compilerArgs.add("--add-modules=jdk.incubator.vector")
             }
 
     configurations.all {
@@ -35,33 +36,38 @@ fun Project.applyCommonJavaConfiguration(sourcesJar: Boolean, banSlf4j: Boolean 
     }
 
     tasks.withType<Test>().configureEach {
-        useJUnitPlatform()
+        useJUnitPlatform {
+            includeEngines("junit-jupiter", "jqwik")
+        }
     }
 
     dependencies {
         "compileOnly"("com.google.code.findbugs:jsr305:3.0.2")
-        "testImplementation"("org.junit.jupiter:junit-jupiter-api:5.10.0")
-        "testImplementation"("org.junit.jupiter:junit-jupiter-params:5.10.0")
-        "testImplementation"("org.mockito:mockito-core:5.4.0")
-        "testImplementation"("org.mockito:mockito-junit-jupiter:5.4.0")
-        "testRuntimeOnly"("org.junit.jupiter:junit-jupiter-engine:5.10.0")
+        "testImplementation"("org.junit.jupiter:junit-jupiter-api:5.11.1")
+        "testImplementation"("org.junit.jupiter:junit-jupiter-params:5.11.1")
+        "testImplementation"("net.jqwik:jqwik:1.9.0")
+        "testImplementation"("org.mockito:mockito-core:5.14.0")
+        "testImplementation"("org.mockito:mockito-junit-jupiter:5.14.0")
+        "testRuntimeOnly"("org.junit.jupiter:junit-jupiter-engine:5.11.1")
     }
 
     // Java 8 turns on doclint which we fail
     tasks.withType<Javadoc>().configureEach {
         (options as StandardJavadocDocletOptions).apply {
             addStringOption("Xdoclint:none", "-quiet")
+            addStringOption("-add-modules", "jdk.incubator.vector")
             tags(
                     "apiNote:a:API Note:",
                     "implSpec:a:Implementation Requirements:",
                     "implNote:a:Implementation Note:"
             )
             options.encoding = "UTF-8"
+
             links(
                     "https://jd.advntr.dev/api/latest/",
                     "https://logging.apache.org/log4j/2.x/javadoc/log4j-api/",
                     "https://www.antlr.org/api/Java/",
-                    "https://jd.papermc.io/paper/1.21/",
+                    "https://jd.papermc.io/paper/1.21.8/",
                     "https://intellectualsites.github.io/fastasyncworldedit-javadocs/worldedit-core/"
             )
             docTitle = "${rootProject.name}-${project.description}" +  " " + "${rootProject.version}"
